--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine On
 
-# Si el archivo o directorio existe, no redirige
+# Evita redirigir si el archivo o directorio existe
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Redirige todo lo demás a index.php
-RewriteRule ^ index.php [QSA,L]
+# Redirige todo lo demás a public/index.php
+RewriteRule ^(.*)$ index.php [QSA,L]
